--- a/src/main/resources/templates/Teacher/teacher.html
+++ b/src/main/resources/templates/Teacher/teacher.html
@@ -5,6 +5,7 @@
     <meta charset="ISO-8859-1"/>
     <link rel="stylesheet" type="text/css" href="/css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Arvo&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <nav role="navigation" class="primary-navigation">
@@ -21,7 +22,137 @@
         </ul>
     </nav>
 
-    <h1>Stats</h1>
-    <p>Course: <span th:text="${course}"></span></p>
+    <h1 id="headerTeacher">Teacher Statistics</h1>
+
+    <div class="genderChartTeacher">
+        <canvas id="genderChart"></canvas>
+    </div>
+
+    <div class="ageChartTeacher">
+        <canvas id="ageChart"></canvas>
+    </div>
+
+    <div class="averageGradeChartTeacher">
+        <canvas id="averageGradeChart"></canvas>
+    </div>
+
+    <script th:inline="javascript">
+
+        let maleCount = /*[[${maleCount}]]*/ 0;
+        let femaleCount = /*[[${femaleCount}]]*/ 0;
+
+        let ages = /*[[${ages}]]*/ 0;
+
+        // Count the frequency of each age
+        let ageCounts = {};
+        ages.forEach(age => {
+            ageCounts[age] = (ageCounts[age] || 0) + 1;
+        });
+
+        // Extract unique ages and their frequencies
+        let uniqueAges = Object.keys(ageCounts).map(Number);
+        let frequencies = Object.values(ageCounts);
+
+        let avg05 = /*[[${avg05}]]*/ 0;
+        let avg510 = /*[[${avg510}]]*/ 0;
+        let avg1015 = /*[[${avg1015}]]*/ 0;
+        let avg1520 = /*[[${avg1520}]]*/ 0;
+
+        document.addEventListener("DOMContentLoaded", function() {
+            let ctx = document.getElementById('genderChart').getContext('2d');
+            let genderChart = new Chart(ctx, {
+                type: 'pie',
+                data: {
+                    labels: ['Female', 'Male'],
+                    datasets: [{
+                        label: 'Number of Students',
+                        data: [femaleCount, maleCount],
+                        backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)'
+                        ],
+                        borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(54, 162, 235, 1)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                responsive: true,
+                maintainAspectRatio: false,
+                plugins: { //remove grid but keep labels
+                    legend: {
+                        display: true,
+                    }
+                }
+                }
+            });
+
+            let btx = document.getElementById('ageChart').getContext('2d');
+            let ageChart = new Chart(btx, {
+                type: 'bar',
+                data: {
+                    labels: uniqueAges,
+                    datasets: [{
+                        label: 'Quantity of Students',
+                        data: frequencies,
+                        fill: false,
+                        borderColor: 'rgba(54, 162, 235, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    scales: {
+                        y: {
+                            ticks: {
+                                stepSize: 1
+                            },
+                            beginAtZero: true
+                        }
+                    }
+                }
+            });
+
+            let atx = document.getElementById('averageGradeChart').getContext('2d');
+            let averageGradeChart = new Chart(atx, {
+                type: 'bar',
+                data: {
+                    labels: ['0-5', '5-10', '10-15', '15-20'],
+                    datasets: [{
+                        label: 'Number of Students',
+                        data: [avg05, avg510, avg1015, avg1520],
+                        backgroundColor: [
+                            'rgba(255, 99, 132, 0.2)',
+                            'rgba(54, 162, 235, 0.2)',
+                            'rgba(255, 206, 86, 0.2)',
+                            'rgba(75, 192, 192, 0.2)'
+                        ],
+                        borderColor: [
+                            'rgba(255, 99, 132, 1)',
+                            'rgba(54, 162, 235, 1)',
+                            'rgba(255, 206, 86, 1)',
+                            'rgba(75, 192, 192, 1)'
+                        ],
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    responsive: true,
+                    maintainAspectRatio: false,
+                    scales: {
+                        y: {
+                            ticks: {
+                                stepSize: 1,
+                                beginAtZero: true
+                            }
+                        },
+                    }
+                }
+            });
+        });
+    </script>
 </body>
 </html>
