--- a/src/main/resources/templates/Admin/course.html
+++ b/src/main/resources/templates/Admin/course.html
@@ -37,12 +37,12 @@
         </tr>
       </thead>
       <tbody>
-        <tr th:each="curso : ${list_course}">
+        <tr th:each="curso,i : ${list_course}">
           <td th:text="${curso.idc}"></td>
           <td th:text="${curso.name}"></td>
           <td th:text="${curso.description}"></td>
           <td th:text="${curso.duration}"></td>
-          <td th:text="${curso.capacity}"></td>
+          <td th:text="${list_student[i.index]} + ' / ' + ${curso.capacity}"></td>
           <td><a th:href="@{/admin/course/deleteCourse/{id}(id=${curso.idc})}">Delete</a></td>
         </tr>
       </tbody>
