--- a/src/main/resources/templates/Admin/addStudent.html
+++ b/src/main/resources/templates/Admin/addStudent.html
@@ -38,6 +38,8 @@
             <input id="email" type="email" autocomplete="off" required th:field="*{email}" placeholder="Email">
             <label for="address">Address:</label>
             <input id="address" type="text" autocomplete="off" required th:field="*{address}" placeholder="Address">
+            <label for="gender">Gender:</label>
+            <input id="gender" type="text" autocomplete="off" required th:field="*{gender}" placeholder="Gender">
             <label for="birthdate">Birthdate:</label>
             <input id="birthdate" name="birthdate" type="date" autocomplete="off" required th:field="*{birthdate}" placeholder="Birthdate">
             <label for="idc">Course ID:</label>
