--- a/src/main/resources/templates/Student/class.html
+++ b/src/main/resources/templates/Student/class.html
@@ -11,6 +11,7 @@
             <ul>
                 <li><a th:href="@{/student}">Home</a></li>
                 <li><a th:href="@{/student/class}">Class</a></li>
+                <li><a th:href="@{/student/changeS/{id}(id=${student.ids})}">Edit Profile</a></li>
                 <li><a th:href="@{/logout}">Logout</a></li>
             </ul>
         </nav>
