--- a/src/main/resources/templates/Admin/addTeacher.html
+++ b/src/main/resources/templates/Admin/addTeacher.html
@@ -39,10 +39,12 @@
             <input id="email" type="email" autocomplete="off" required th:field="*{email}" placeholder="Email">
             <label for="address">Address:</label>
             <input id="address" type="text" autocomplete="off" required th:field="*{address}" placeholder="Address">
+            <label for="gender">Gender:</label>
+            <input id="gender" type="text" autocomplete="off" required th:field="*{gender}" placeholder="Gender">
             <label for="birthdate">Birthdate:</label>
             <input id="birthdate" type="date" autocomplete="off" required th:field="*{birthdate}" placeholder="Birthdate">
             <label for="idc">Course ID:</label>
-            <input id="idc" type="number" min="0" autocomplete="off" required th:field="*{idc}" placeholder="Course ID">
+            <input id="idc" type="number" min="1" autocomplete="off" required th:field="*{idc}" placeholder="Course ID">
             <label for="salary">Salary:</label>
             <input id="salary" type="number" min="10" max="25" value="10" autocomplete="off" required th:field="*{salary}" placeholder="Salary">
             <button type="submit">Add Teacher</button>
