--- a/src/main/resources/templates/Teacher/teacher.html
+++ b/src/main/resources/templates/Teacher/teacher.html
@@ -18,6 +18,7 @@
                     <li><a th:href="@{/teacher/student/out}">Finalized/Abandoned</a></li>
                 </ul>
             </li>
+            <li><a th:href="@{/teacher/changeT/{id}(id=${teacher.idt})}">Edit Profile</a></li>
             <li><a th:href="@{/logout}">Logout</a></li>
         </ul>
     </nav>
