VFinal - Opacidade Gráficos

--- a/src/main/resources/templates/Student/student.html
+++ b/src/main/resources/templates/Student/student.html
@@ -52,8 +52,8 @@
                     label: 'Number of Students',
                     data: [femaleCount, maleCount],
                     backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)'
+                        'rgba(255, 99, 132, 0.4)',
+                        'rgba(54, 162, 235, 0.4)'
                     ],
                     borderColor: [
                         'rgba(255, 99, 132, 1)',
@@ -82,9 +82,9 @@
                     label: 'Number of Students',
                     data: [inCourseCount, finishedCount, quitedCount],
                     backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)'
+                        'rgba(255, 99, 132, 0.4)',
+                        'rgba(54, 162, 235, 0.4)',
+                        'rgba(255, 206, 86, 0.4)'
                     ],
                     borderColor: [
                         'rgba(255, 99, 132, 1)',
@@ -114,10 +114,10 @@
                     label: 'Number of Students',
                     data: [avg05, avg510, avg1015, avg1520],
                     backgroundColor: [
-                        'rgba(255, 99, 132, 0.2)',
-                        'rgba(54, 162, 235, 0.2)',
-                        'rgba(255, 206, 86, 0.2)',
-                        'rgba(75, 192, 192, 0.2)'
+                        'rgba(255, 99, 132, 0.4)',
+                        'rgba(54, 162, 235, 0.4)',
+                        'rgba(255, 206, 86, 0.4)',
+                        'rgba(46,184,0,0.4)'
                     ],
                     borderColor: [
                         'rgba(255, 99, 132, 1)',
