--- a/src/main/resources/templates/Admin/course.html
+++ b/src/main/resources/templates/Admin/course.html
@@ -26,8 +26,8 @@
     <h1>Listed Courses</h1>
       <button class="add_button" type="button" onclick="window.location.href='/admin/course/addCourse'">Add Course</button><br><br>
 
-      <div th:if:text="${error_aC}" style="color: red;">
-        <p th:text="${error_aC}"></p>
+      <div th:if:text="${error_C}" style="color: red;">
+        <p th:text="${error_C}"></p>
       </div>
 
       <table border="1" class="table">
