--- a/src/main/resources/templates/Admin/eStudent.html
+++ b/src/main/resources/templates/Admin/eStudent.html
@@ -43,7 +43,7 @@
         <label for="birthdate">Birthdate:</label>
         <input id="birthdate" name="birthdate" type="date" autocomplete="off" required th:field="*{student.birthdate}" placeholder="Birthdate">
         <label for="idc">Course ID:</label>
-        <input id="idc" type="number" min="1" max="10" autocomplete="off" required th:field="*{student.idc}" placeholder="Course ID">
+        <input id="idc" type="number" min="1" autocomplete="off" required th:field="*{student.idc}" placeholder="Course ID">
         <label for="average">Average:</label>
         <input type="number" id="average" min="0.0" max="20.0" step="0.1" autocomplete="off" required th:field="*{student.average}" placeholder="Average">
         <input type="hidden" id="state" name="state" th:value="${student.state}">
